# mcfly

./: .gitignore  .travis.yml  .zshrc  CHANGELOG.txt  Cargo.lock.bak  Cargo.toml  HomebrewFormula  LICENSE  README.md  bash_wizard.sh  dev.bash  dev.fish  dev.zsh  mcfly-bash.sh  mcfly.bash  mcfly.example.toml  mcfly.fish  mcfly.ps1  mcfly.sh  mcfly.zsh  update.sh
.github/workflows/: clippy.yml  mean_bean_ci.yml  mean_bean_deploy.yml  rustfmt.yml
ci/: before_deploy.sh  build.bash  install.sh  script.sh
docs/: example-config.toml
pkg/brew/: mcfly.rb
src/: bash_history.rs  cli.rs  command_input.rs  dumper.rs  exporter.rs  fake_typer.rs  fixed_length_grapheme_string.rs  fzf.rs  history.rs  history_cleaner.rs  history_path_updater.rs  init.rs  interface.rs  lib.rs  main.rs  network.rs  node.rs  path_update_helpers.rs  settings.rs  shell_history.rs  simplified_command.rs  stats_generator.rs  time.rs  trainer.rs  training_cache.rs  training_sample_generator.rs  weights.rs
src/history/: db_extensions.rs  history.rs  mod.rs  schema.rs
