[package]
name = "mcfly"
version = "0.9.3"
authors = ["Andrew Cantino <cantino@users.noreply.github.com>"]
edition = "2021"
description = "McFly replaces your default ctrl-r shell history search with an intelligent search engine that takes into account your working directory and the context of recently executed commands. McFly's suggestions are prioritized in real time with a small neural network."
license = "MIT"
repository = "https://github.com/cantino/mcfly"
categories = ["command-line-utilities"]
exclude = ["HomebrewFormula", "HomebrewFormula/*", "pkg/*", "docs/*"]

[profile.release]
lto = true

[profile.dev]
debug = true

[dependencies]
config = { version = "0.15.0", default-features = false, features = ["toml"] }
chrono = "0.4"
chrono-systemd-time = "0.3"
csv = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
humantime = "2.1"
directories-next = "2.0"
itertools = "0.14"
rand = "0.9"
path-absolutize = "3.1"
regex = { version = "1", default-features = false, features = ["perf", "std"] }
shellexpand = "3"
unicode-segmentation = "1.11"

[dependencies.rusqlite]
version = "0.33"
features = ["functions", "unlock_notify"]

[dependencies.crossterm]
version = "0.28"
features = ["use-dev-tty"]

[dependencies.clap]
version = "4"
features = ["derive"]

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
autopilot = "0.4.0"

[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
